<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="50dp"
                android:text="@string/player_nom"/>
            <EditText
                android:id="@+id/nou_nom_edit"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:inputType="textCapWords" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="50dp"
                android:text="@string/player_cognom"/>
            <EditText
                android:id="@+id/nou_cognom_edit"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:inputType="textCapWords" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="50dp"
                android:text="@string/player_position"/>
            <EditText
                android:id="@+id/nou_posicio_edit"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:inputType="textCapWords" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="50dp"
                android:text="@string/player_goals"/>
            <EditText
                android:id="@+id/nou_gols_edit"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:inputType="number" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="50dp"
                android:text="@string/player_matches"/>
            <EditText
                android:id="@+id/nou_matches_edit"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:inputType="number" />


        </LinearLayout>
    </ScrollView>


</LinearLayout>